# BMA1020-Project

./: Cargo.toml  bma1020-project-7f117365a8c060a4.js  bma1020-project-7f117365a8c060a4_bg.wasm  flake.nix  index.html  justfile
src/: app.rs  main.rs  vek_extension.rs
