[package]
name = "BMA1020-Project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = { git = "https://github.com/nannou-org/nannou", version = "0.18.1" }
nannou_egui = { git = "https://github.com/nannou-org/nannou", version = "0.5.0" }
vek = "0.15"
itertools = "0.10"
rayon = "1.7"
