[package]
name = "bma1020-project"
version = "0.1.0"
edition = "2021"

[dependencies]
vek = "0.15"
itertools = "0.10"

nannou = { version = "0.18.1", git = "https://github.com/nannou-org/nannou.git", rev = "287be8a4d075b17332ca0bf34649f5d25e751c00", features = [
  "wasm-experimental",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
async-std = { version = "1.12", features = ["unstable"] }
gloo-console = "0.2"
